--- a/swagger/clientes.yaml
+++ b/swagger/clientes.yaml
@@ -1,191 +1,238 @@
----
-swagger: "2.0"
+swagger: '2.0'
 info:
-  title: "API Crear Cliente"
-  description: "API que sirve para crear cliente en sistema de RM. RM es el sistema\
-    \ principal del banco en donde se guarda los codigos internos de cada cliente\
-    \ ( Código Unico)\n<strong>Ejemplo de uso:</strong> Lo usamos en todos los procesos\
-    \ se necesite crear un cliente , como antes de crear una cuenta o tarjeta si el\
-    \ cliente no existe primero usamos el API de crear cliente y luego seguimos con\
-    \ el flujo.\n<strong>Parametros Entrada:</strong> Datos personales del cliente,\
-    \ nombre, fecha nacimiento, dirección , etc\n<strong>Parametros Salida:</strong>\
-    \ Código Unico del cliente"
-  version: "1.0.0"
-  x-ibm-name: "ms-crearcliente"
-host: "crearcliente-UAT.interbankclouduat.pe"
-basePath: "/ms"
+  title: API Clientes
+  description: |-
+    API que sirve para crear cliente en sistema de RM. RM es el sistema principal del banco en donde se guarda los codigos internos de cada cliente ( Código Unico)
+    <strong>Ejemplo de uso:</strong> Lo usamos en todos los procesos se necesite crear un cliente , como antes de crear una cuenta o tarjeta si el cliente no existe primero usamos el API de crear cliente y luego seguimos con el flujo.
+    <strong>Parametros Entrada:</strong> Datos personales del cliente, nombre, fecha nacimiento, dirección , etc
+    <strong>Parametros Salida:</strong> Código Unico del cliente
+  version: 1.0.0
+  x-ibm-name: ms-crearcliente
+host: crearcliente-UAT.interbankclouduat.pe
+basePath: /ms
 paths:
   /clientes:
-    post:
+    get:
+      summary: Busca un cliente según filtros. Filtro disponible 'Número de Documento'.
       parameters:
-      - in: "body"
-        name: "request"
-        required: true
-        description: "Registra los datos de un cliente en RM."
-        schema:
-          $ref: "#/definitions/MessageRequest"
+        - name: numeroDocumento
+          in: query
+          required: true
+          description: Número de documento del cliente.
+          type: string
       responses:
-        200:
-          description: "Conexion exitosa"
+        '200':
+          description: Operación Exitosa
           schema:
-            $ref: "#/definitions/MessageResponse"
+            $ref: '#/definitions/Cliente'
+    post:
+      summary: Registra un nuevo cliente.
+      parameters:
+        - in: body
+          name: request
+          required: true
+          schema:
+            $ref: '#/definitions/Cliente'
+      responses:
+        '200':
+          description: Operación Exitosa
+          schema:
+            $ref: '#/definitions/CrearClienteResponse'
+  /clientes/{codigoUnico}:
+    get:
+      summary: Retorna los datos de un cliente.
+      parameters:
+        - name: codigoUnico
+          in: path
+          required: true
+          description: Código Único del cliente.
+          type: string
+      responses:
+        '200':
+          description: Operación Exitosa
+          schema:
+            $ref: '#/definitions/Cliente'
 definitions:
-  MessageRequest:
-    type: "object"
+  Cliente:
+    type: object
     required:
-    - "tipoDocumento"
-    - "numeroDocumento"
-    - "fechaNacimiento"
-    - "apellidoPaterno"
-    - "apellidoMaterno"
-    - "primerNombre"
-    - "segundoNombre"
-    - "sexo"
-    - "estadoCivil"
-    - "tipoNacionalidad"
-    - "codigoPaisNacimiento"
-    - "codigoPaisResidencia"
-    - "codigoPaisNacionalidad"
-    - "tipoVia"
-    - "nombreVia"
-    - "numeroCalle"
-    - "idManzana"
-    - "idLote"
-    - "idInterior"
-    - "nombreUrbanizacion"
-    - "referenciaUbicacion"
-    - "departamento"
-    - "provincia"
-    - "distrito"
-    - "listaTelefonos"
-    - "tipoEmail"
-    - "email"
-    - "codigoCIIU"
-    - "fechaInicioEmpleo"
-    - "nombreEmpresa"
-    - "codigoOcupacion"
+      - tipoDocumento
+      - numeroDocumento
+      - fechaNacimiento
+      - apellidoPaterno
+      - apellidoMaterno
+      - primerNombre
+      - segundoNombre
+      - sexo
+      - estadoCivil
+      - tipoNacionalidad
+      - codigoPaisNacimiento
+      - codigoPaisResidencia
+      - codigoPaisNacionalidad
+      - tipoVia
+      - nombreVia
+      - numeroCalle
+      - idManzana
+      - idLote
+      - idInterior
+      - nombreUrbanizacion
+      - referenciaUbicacion
+      - departamento
+      - provincia
+      - distrito
+      - listaTelefonos
+      - tipoEmail
+      - email
+      - codigoCIIU
+      - fechaInicioEmpleo
+      - nombreEmpresa
+      - codigoOcupacion
     properties:
       tipoDocumento:
-        type: "string"
-        example: "1"
+        type: string
+        example: '1'
       numeroDocumento:
-        type: "string"
-        example: "75450500"
+        type: string
+        example: '75450500'
       fechaNacimiento:
-        type: "string"
-        example: "1980-01-01"
+        type: string
+        example: '1980-01-01'
       apellidoPaterno:
-        type: "string"
-        example: "CARDENAS"
+        type: string
+        example: CARDENAS
       apellidoMaterno:
-        type: "string"
-        example: "MENDIOLA"
+        type: string
+        example: MENDIOLA
       primerNombre:
-        type: "string"
-        example: "LORENZO"
+        type: string
+        example: LORENZO
       segundoNombre:
-        type: "string"
-        example: "JEREMIAS"
+        type: string
+        example: JEREMIAS
       sexo:
-        type: "string"
-        example: "M"
+        type: string
+        example: M
       estadoCivil:
-        type: "string"
-        example: "U"
+        type: string
+        example: U
       tipoNacionalidad:
-        type: "string"
-        example: "0"
+        type: string
+        example: '0'
       codigoPaisNacimiento:
-        type: "string"
-        example: "4028"
+        type: string
+        example: '4028'
       codigoPaisResidencia:
-        type: "string"
-        example: "4028"
+        type: string
+        example: '4028'
       codigoPaisNacionalidad:
-        type: "string"
-        example: "4028"
+        type: string
+        example: '4028'
       tipoVia:
-        type: "string"
-        example: "av"
+        type: string
+        example: av
       nombreVia:
-        type: "string"
-        example: "SAN FRANCISCO"
+        type: string
+        example: SAN FRANCISCO
       numeroCalle:
-        type: "string"
-        example: "258"
+        type: string
+        example: '258'
       idManzana:
-        type: "string"
-        example: "A"
+        type: string
+        example: A
       idLote:
-        type: "string"
-        example: "8"
+        type: string
+        example: '8'
       idInterior:
-        type: "string"
-        example: "102"
+        type: string
+        example: '102'
       nombreUrbanizacion:
-        type: "string"
-        example: "LOS CONDORES"
+        type: string
+        example: LOS CONDORES
       referenciaUbicacion:
-        type: "string"
-        example: "AL FRENTE DE HOSPITAL CENTRAL"
+        type: string
+        example: AL FRENTE DE HOSPITAL CENTRAL
       departamento:
-        type: "string"
-        example: "LIMA"
+        type: string
+        example: LIMA
       provincia:
-        type: "string"
-        example: "LIMA"
+        type: string
+        example: LIMA
       distrito:
-        type: "string"
-        example: "AREQUIPA"
+        type: string
+        example: AREQUIPA
       listaTelefonos:
         example: []
       tipoEmail:
-        type: "string"
-        example: "p"
+        type: string
+        example: p
       email:
-        type: "string"
-        example: "ejemplo@gmail.com"
+        type: string
+        example: ejemplo@gmail.com
       codigoCIIU:
-        type: "string"
-        example: ""
+        type: string
+        example: ''
       fechaInicioEmpleo:
-        type: "string"
-        example: "2015-09-20"
+        type: string
+        example: '2015-09-20'
       nombreEmpresa:
-        type: "string"
-        example: "TELNET S.A."
+        type: string
+        example: TELNET S.A.
       codigoOcupacion:
-        type: "string"
-        example: "EMPLEADO"
-  MessageResponse:
-    type: "object"
+        type: string
+        example: EMPLEADO
+  CrearClienteResponse:
+    type: object
     properties:
       codigoUnicoCliente:
-        type: "string"
-        example: "0060060027"
+        type: string
+        example: '0060060027'
 x-ibm-configuration:
   enforced: true
   testable: true
-  phase: "realized"
+  phase: realized
   cors:
     enabled: true
   assembly:
     execute:
-    - proxy:
-        title: "proxy"
-        timeout: 60
-        verb: "keep"
-        cache-response: "protocol"
-        cache-ttl: 900
-        version: "1.0.0"
-        description: "Service"
-        target-url: "https://hackathon-api-server.herokuapp.com/crearcliente"
+      - operation-switch:
+          title: operation-switch
+          case:
+            - operations:
+                - verb: get
+                  path: /clientes
+                - verb: post
+                  path: /clientes
+              execute:
+                - proxy:
+                    title: proxy
+                    timeout: 60
+                    verb: keep
+                    cache-response: protocol
+                    cache-ttl: 900
+                    version: 1.0.0
+                    description: Service
+                    target-url: 'https://hackathon-api-server.herokuapp.com/clientes'
+            - operations:
+                - verb: get
+                  path: '/clientes/{codigoUnico}'
+              execute:
+                - proxy:
+                    title: proxy
+                    timeout: 60
+                    verb: keep
+                    cache-response: protocol
+                    cache-ttl: 900
+                    version: 1.0.0
+                    description: Service
+                    target-url: 'https://hackathon-api-server.herokuapp.com/clientes/{codigoUnico}'
+          otherwise: []
+          version: 1.0.0
     catch: []
 securityDefinitions:
   SecureID:
-    type: "apiKey"
-    description: ""
-    in: "header"
-    name: "X-IBM-Client-Id"
+    type: apiKey
+    description: ''
+    in: header
+    name: X-IBM-Client-Id
 security:
-- SecureID: []
+  - SecureID: []
